--- a/API/src/main/resources/templates/views/booksCollection.html
+++ b/API/src/main/resources/templates/views/booksCollection.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -16,10 +18,20 @@
     <!-- Custom fonts for this template -->
     <link href="bootstrap/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="bootstrap/css/grayscale.min.css" rel="stylesheet">
+
+    <style>
+        table td{
+        vertical-align:top;
+        border:solid 1px #888;
+        padding:10px;
+        }
+
+    </style>
 
 </head>
 
@@ -29,7 +41,9 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
         </button>
@@ -53,7 +67,8 @@
             <h1 class="mx-auto my-0 text-uppercase">Library Manager</h1>
             <h2 class="text-white-50 mx-auto mt-2 mb-5">View and Search for books in the Library</h2>
             <form class="form-inline d-flex" action="/searchbook" method="get">
-                <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" name="bookname" placeholder="Enter the name of the book...">
+                <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" name="bookname"
+                       placeholder="Enter the name of the book...">
                 <button type="submit" class="btn btn-primary mx-auto">Search</button>
             </form>
         </div>
@@ -64,35 +79,22 @@
 <section id="books" class="projects-section bg-light">
     <div class="container">
 
-        <!-- Featured Project Row -->
-        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-            <div class="col-xl-8 col-lg-7">
-                <img class="img-fluid mb-3 mb-lg-0" src="bootstrap/img/img1.jpg" alt="">
-            </div>
-            <div class="col-xl-4 col-lg-5">
-                <div class="featured-text text-center text-lg-left">
-                    <h4>The Library</h4>
-                    <p class="text-black-50 mb-0">The General Library was established in 1990</p>
-                </div>
-            </div>
-        </div>
-
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-            <div class="col-lg-6">
-                <img class="img-fluid" src="bootstrap/img/img2.jpg" alt="">
-            </div>
-            <div class="col-lg-6">
-                <div class="bg-black text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text w-100 my-auto text-center text-lg-left">
-                            <h4 class="text-white">Pristine</h4>
-                            <p class="mb-0 text-white-50">Calm and beautiful environment</p>
-                            <hr class="d-none d-lg-block mb-0 ml-0">
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <table>
+                <tr>
+                    <td>Book Id</td>
+                    <td>Book Name</td>
+                    <td>Author</td>
+                    <td>Count</td>
+                </tr>
+                <tr th:each="book:${books}">
+                    <td th:text="${book.bid}"/>
+                    <td th:text="${book.bookname}"/>
+                    <td th:text="${book.bookAuthor}"/>
+                    <td th:text="${book.bookcount}"/>
+                </tr>
+            </table>
         </div>
 
         <!-- Project Two Row -->
