--- a/API/src/main/resources/templates/views/signupform.html
+++ b/API/src/main/resources/templates/views/signupform.html
@@ -43,9 +43,9 @@
             <div class="col-md-10 col-lg-8 mx-auto text-center">
                 <h2 class="text-white mb-5">Enter your details</h2>
                 <form class="form-inline d-flex" action="/register" method="post">
-                    <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="name" placeholder="Name">
+                    <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="name" placeholder="Name">
                     <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="email" placeholder="Email"><br>
-                    <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="password" placeholder="Password"><br>
+                    <input type="password" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="password" placeholder="Password"><br>
                     <button type="submit" class="btn btn-primary mx-auto">Sign Up</button>
                 </form>
 
