Changes to urls

--- a/API/src/main/resources/templates/views/signupform.html
+++ b/API/src/main/resources/templates/views/signupform.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto text-center">
                 <h2 class="text-white mb-5">Enter your details</h2>
-                <form class="form-inline d-flex" action="/register" method="post">
+                <form class="form-inline d-flex" action="/api/register" method="post">
                     <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" name="name" placeholder="Name">
                     <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" name="email" placeholder="Email"><br>
                     <input type="password" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" name="password" placeholder="Password"><br>
