--- a/BookService/src/main/resources/templates/views/booksCollection.html
+++ b/BookService/src/main/resources/templates/views/booksCollection.html
@@ -50,10 +50,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/findAllBooks">Books</a>
+                    <a class="nav-link js-scroll-trigger" href="/book/findAllBooks">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/register">Register</a>
+                    <a class="nav-link js-scroll-trigger" href="/api/register">Register</a>
                 </li>
             </ul>
         </div>
@@ -66,7 +66,7 @@
         <div class="mx-auto text-center">
             <h1 class="mx-auto my-0 text-uppercase">Library Manager</h1>
             <h2 class="text-white-50 mx-auto mt-2 mb-5">View and Search for books in the Library</h2>
-            <form class="form-inline d-flex" action="/searchbook" method="get">
+            <form class="form-inline d-flex" action="/book/searchbook" method="get">
                 <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" name="bookname"
                        placeholder="Enter the name of the book...">
                 <button type="submit" class="btn btn-primary mx-auto">Search</button>
